--- a/packages/ui/src/Diary.css
+++ b/packages/ui/src/Diary.css
@@ -1,7 +1,7 @@
 .diary {
   border-radius: 10px;
   border: lightgray 1px solid;
-  margin: auto;
+  margin: 40px auto;
   padding: 20px;
   max-width: 600px;
 }
