--- a/packages/ui/src/Flare.css
+++ b/packages/ui/src/Flare.css
@@ -17,5 +17,11 @@
   position: fixed;
   top: 5px;
   right: 5px;
+  padding: 1rem;
   z-index: 2;
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 4px;
 }
